syntax = "proto3";

package api.payment.v1;

message InvoicePaid {
  string id = 1;
  string order_id = 2;
}
